Added Post Footer that contains (from,to) dates of the post Changed default app font to Product_Sans_Regular.ttf

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,11 +79,11 @@ flutter:
     # list giving the asset and other descriptors for the font. For
     # example:
   fonts:
-    - family: CenturyGothic
+    - family: ProductSans
       fonts:
-        - asset: assets/fonts/Century_Gothic_400.ttf
+        - asset: assets/fonts/Product_Sans_Regular.ttf
           style: normal
-          weight: 400
+  #          weight: 400
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
