--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -34,13 +34,18 @@ dependencies:
   esys_flutter_share: ^1.0.2
   timeago: ^2.0.26
   intl: ^0.16.1
+  carousel_slider: ^1.4.1
+  stack_overlay: ^0.1.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  firebase_core: ^0.4.0+9
   firebase_messaging: ^6.0.9
+  firebase_dynamic_links: ^0.5.0+11
 #  firebase_auth: ^0.15.4
 #  firebase_core: ^0.4.4
 #  cloud_firestore: ^0.13.2+1
