--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   share: ^0.6.3+5
   http: ^0.12.0+4
   cached_network_image: ^2.0.0
+  flutter_advanced_networkimage: ^0.7.0
   esys_flutter_share: ^1.0.2
   timeago: ^2.0.26
   intl: ^0.16.1
